crates/tyrano-syntax/tests/data/valid/crlf.tree
scenario@0..22
  text_line@0..3
    text@0..1 "a"
    newline@1..3 "\r\n"
  text_line@3..6
    text@3..4 "b"
    newline@4..6 "\r\n"
  at_tag_line@6..22
    at@6..7 "@"
    tag_name@7..12
      ident@7..11 "wait" trail(whitespace@11..12)
    param@12..20
      ident@12..16 "time"
      eq@16..17 "="
      param_value@17..20
        number@17..20 "200"
    newline@20..22 "\r\n"
  eof@22..22 ""
